# li-gen

./: .gitignore  LICENSE.md  Makefile  Procfile  README.md  licenses.db  pyproject.toml  requirements.txt
api/: views.py
docs/source/: conf.py  index.rst
li_gen/: app.py  li_gen.py  manage.py  models.py  settings.py  views.py
li_gen/api/: api.py
li_gen/li_gen/: settings.py  urls.py  wsgi.py
li_gen/license/: urls.py  views.py
li_gen/license/migrations/: 0002_license_version_slug.py  0003_auto_20190216_2251.py  0005_auto_20190216_2309.py  0006_license_details.py
li_gen/settings/: base.py  heroku.py  local.py
li_gen/static/css/: main.css
li_gen/templates/: index.html
license/: admin.py  models.py  serializers.py  urls.py  views.py
license/migrations/: 0001_initial.py  0004_remove_license_version.py  0007_license_version.py
license/templates/license/: index.html
static/css/: main.css
