[tool.poetry]
name = "li_gen"
version = "2019.01.12"
description = "A licence generation tool for projects"
authors = ["Neil Munro"]

[tool.poetry.dependencies]
python = "^3.7"
quart = "^0.7.2"
peewee = "^3.8"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
isort = "^4.3"
flake8 = "^3.6"
sphinx = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
