[tool.poetry]
name = "li_gen"
version = "2019.01.12"
description = "A licence generation tool for projects"
authors = ["Neil Munro"]

[tool.poetry.dependencies]
python = "^3.7"
postgres = "^2.2"
django = "^2.1"
whitenoise = "^4.1"
python-decouple = "^3.1"
djangorestframework = "^3.9"
markdown = "^3.0"
django-filter = "^2.1"
gunicorn = "^19.9"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
isort = "^4.3"
flake8 = "^3.6"
sphinx = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
